--- a/index.html
+++ b/index.html
@@ -7,7 +7,18 @@
     <title>Document</title>
 </head>
 <body>
+
+<h2>Rock Paper Scissors !</h2>
+<p> Pick your card to play </p>
+
+<div>
+    <img src="content/s.png" id="scissor">
+    <img src="content/p.png" id="paper">
+    <img src="content/r.png" id="rock">
+
     
+</div>
+<Label id="label"></Label>
 
     <script src="index.js"></script>
 </body>
