Added more fuctionalities

--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 <p> Pick your card to play </p>
 
 <div>
-    <img src="content/s.png" id="scissor">
-    <img src="content/p.png" id="paper">
     <img src="content/r.png" id="rock">
-
+    <img src="content/p.png" id="paper">
+    <img src="content/s.png" id="scissor">
     
-</div>
-<Label id="label"></Label>
+</div><br>
+
+<Label id="machinechoice"></Label><br>
+<Label id="label"></Label><br>
+<Label id="score">User score:</Label><br>
 
     <script src="index.js"></script>
 </body>
