--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
 
@@ -22,6 +23,6 @@
 <Label id="label"></Label><br>
 <Label id="score">User score:</Label><br>
 
-    <script src="index.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
