--- a/index.html
+++ b/index.html
@@ -8,20 +8,33 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+<div class="bg">
+<div class="title">   
+    <h2>Rock Paper Scissors !</h2>
+    <p> Pick your card to play </p>  
+</div>
+     
 
-<h2>Rock Paper Scissors !</h2>
-<p> Pick your card to play </p>
+<div class="flex">
 
-<div>
+
+<div class="flexI" >
+ 
     <img src="content/r.png" id="rock">
     <img src="content/p.png" id="paper">
     <img src="content/s.png" id="scissor">
     
-</div><br>
+</div>
+</div>
 
-<Label id="machinechoice"></Label><br>
-<Label id="label"></Label><br>
-<Label id="score">User score:</Label><br>
+<div class="title"> 
+ <Label id="machinechoice">The machine picked:</Label><br>
+ <Label id="label"> </Label><br>
+ <Label id="score">User score: 0</Label><br>
+</div>
+
+
+</div>
 
 <script src="index.js"></script>
 </body>
